ENEX FSL/snapshotDownload (1)/objects/OpportunityLineItem.object
<CustomObject><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>false</enableFeeds><fields><fullName>Aporte_Adicional_Shell_L__c</fullName><externalId>false</externalId><label>Aporte Adicional Shell $</label><precision>18</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Aporte_Adicional_Shell_USD_L__c</fullName><externalId>false</externalId><label>Aporte Adicional Shell USD</label><precision>18</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>C3_BSP_L__c</fullName><externalId>false</externalId><label>C3&gt;BSP</label><length>10</length><required>false</required><type>Text</type><unique>false</unique></fields><fields><fullName>C3_BSP_Lubricante__c</fullName><externalId>false</externalId><label>C3&gt;BSP</label><length>10</length><required>false</required><type>Text</type><unique>false</unique></fields><fields><fullName>C3_Producto__c</fullName><externalId>false</externalId><label>C1 Total Producto</label><precision>18</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>C3_Total_Lubricante__c</fullName><externalId>false</externalId><label>C3 Total ($)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>C3_Unitario__c</fullName><description>C1 Unitario CLP/Lt/Kg</description><externalId>false</externalId><label>Precio Unitario CLP/Lt/Kg</label><precision>18</precision><required>false</required><scale>2</scale><type>Currency</type></fields><fields><fullName>C3_Unitario_con_Aporte_L__c</fullName><externalId>false</externalId><label>C3 Unitario con Aporte</label><precision>18</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>COSTO_PRODUCTO_FLANGE_RPC_Combustible__c</fullName><externalId>false</externalId><label>COSTO PRODUCTO FLANGE RPC ($/M^3)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Clasificacion_Producto_L__c</fullName><externalId>false</externalId><label>Clasificación del Producto</label><length>40</length><required>false</required><type>Text</type><unique>false</unique></fields><fields><fullName>Clasificacion_Producto_Lubricante__c</fullName><externalId>false</externalId><label>Clasificación del Producto</label><length>40</length><required>false</required><type>Text</type><unique>false</unique></fields><fields><fullName>Codigo_de_Producto_CL__c</fullName><externalId>false</externalId><formula>PricebookEntry.Product2.Codigo_de_Producto_CL__c</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><label>SKU</label><required>false</required><type>Text</type><unique>false</unique></fields><fields><fullName>Condicion_de_Credito__c</fullName><externalId>false</externalId><label>Condición de Crédito</label><length>5</length><required>false</required><type>Text</type><unique>false</unique></fields><fields><fullName>Costo_Almacenaje_L__c</fullName><externalId>false</externalId><label>Costo de Almacenaje ($/lt)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Costo_Almacenaje_Lubricante__c</fullName><externalId>false</externalId><label>Costo de Almacenaje ($/lt)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Costo_Financiero_C__c</fullName><externalId>false</externalId><label>Costo Financiero (Referencial)  ($/mᶟ)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Costo_Financiero_Combustible__c</fullName><externalId>false</externalId><label>Costo Financiero (Referencial)  ($/M^3)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Costo_Flete_C_L__c</fullName><description>Lubricante:

El costo de la flete esta dado por la siguiente formula:
Costo Primario + Costo Secundario / 1000 * Distancia. El costo de flete en el caso de combustible se ingresa y es validado por una matriz de distancia.

Combustible:

El flete terreste debería estar asociado a una tabla de precios referenciales. (Actualmente lo agrega el jefe de zona y se basa de acuerdo a la distancia, en base a los kilometros).</description><externalId>false</externalId><label>Costo Flete</label><precision>18</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Costo_Operacionales__c</fullName><externalId>false</externalId><label>Costo Operacionales</label><precision>10</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Costo_Planta_C__c</fullName><externalId>false</externalId><label>Costo Planta  ($/mᶟ)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Costo_Planta_Combustible__c</fullName><externalId>false</externalId><label>Costo Planta  ($/M^3)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Costo_Producto_Flange_RPC_C__c</fullName><description>Costo que se saca de la tabla de producto planta</description><externalId>false</externalId><label>Costo Producto Flange RPC</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Costo_Producto_L__c</fullName><externalId>false</externalId><label>Costo de Producto ($/lt)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Costo_Producto_Lubricante__c</fullName><externalId>false</externalId><label>Costo de Producto ($/lt)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Cuenta_D_Combustible__c</fullName><externalId>false</externalId><label>Cuenta D</label><length>40</length><required>false</required><type>Text</type><unique>false</unique></fields><fields><fullName>Cuenta_D__c</fullName><deleteConstraint>SetNull</deleteConstraint><externalId>false</externalId><label>Cuenta D</label><referenceTo>Account</referenceTo><relationshipLabel>Producto de oportunidad</relationshipLabel><relationshipName>Producto_de_oportunidad</relationshipName><required>false</required><type>Lookup</type></fields><fields><fullName>Dias_Credito_Efectivo_C__c</fullName><externalId>false</externalId><label>Días Crédito Efectivo (Días)</label><precision>3</precision><required>false</required><scale>0</scale><type>Number</type><unique>false</unique></fields><fields><fullName>Dias_Credito_Efectivo_Combustible__c</fullName><externalId>false</externalId><label>Días Crédito Efectivo (Días)</label><precision>3</precision><required>false</required><scale>0</scale><type>Number</type><unique>false</unique></fields><fields><fullName>Diferencia_P_Pizarra_C__c</fullName><externalId>false</externalId><label>Diferencia con P° Pizarra  ($/mᶟ)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Diferencia_P_Pizarra_Combustible__c</fullName><externalId>false</externalId><label>Diferencia con P° Pizarra  ($/M^3)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>FEPP_Combustible__c</fullName><externalId>false</externalId><label>FEPP ($/M^3)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Flete_Lubricante__c</fullName><externalId>false</externalId><label>Flete ($/lt)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Flete_Terrestre_Combustible__c</fullName><externalId>false</externalId><label>Flete Terrestre  ($/M^3)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Forecast_Canal_L__c</fullName><externalId>false</externalId><label>Forecast Canal ($/lt)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Forecast_Canal_Lubricante__c</fullName><externalId>false</externalId><label>Forecast Canal ($/lt)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Gastos_Operacionales_C__c</fullName><externalId>false</externalId><label>Gastos Operacionales</label><precision>10</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Handling_C__c</fullName><externalId>false</externalId><label>Handling E/S  ($/M^3)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Handling_Combustible__c</fullName><externalId>false</externalId><label>Handling E/S  ($/M^3)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>IE_Combustible__c</fullName><externalId>false</externalId><label>IE  ($/M^3)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>IVA_Combustible__c</fullName><externalId>false</externalId><label>IVA  ($/M^3)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Impuesto_Especifico_C__c</fullName><externalId>false</externalId><label>Impuesto Específico ($/M^3)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Impuesto_FEPP_C__c</fullName><externalId>false</externalId><label>Impuesto FEPP ($/M^3)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Localidad_Combustible__c</fullName><externalId>false</externalId><label>Localidad</label><length>40</length><required>false</required><type>Text</type><unique>false</unique></fields><fields><fullName>Margen_C1_C__c</fullName><externalId>false</externalId><label>Margen C1  ($/M^3)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Margen_C1_Combustible__c</fullName><externalId>false</externalId><label>Margen C1  ($/M^3)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Margen_C3_CF_RC_C__c</fullName><externalId>false</externalId><label>Margen C3+CF+RC  ($/M^3)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Margen_C3_CF_RC_Combustible__c</fullName><externalId>false</externalId><label>Margen C3+CF+RC  ($/M^3)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Margen_C3_C__c</fullName><externalId>false</externalId><label>Margen C3  ($/M^3)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Margen_C3_Combustible__c</fullName><externalId>false</externalId><label>Margen C3  ($/M^3)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Margen_C3_L__c</fullName><externalId>false</externalId><label>Margen C3 ($/lt)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Margen_C3_Lubricante__c</fullName><externalId>false</externalId><label>Margen C3 ($/lt)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Margen_C3_Total_L__c</fullName><externalId>false</externalId><label>Margen C3 Total ($)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Margen_C3_con_Aporte_Shell_L__c</fullName><externalId>false</externalId><label>Margen C3 con Aporte Shell</label><precision>18</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Margen_con_Pronto_Pago_L__c</fullName><externalId>false</externalId><label>Margen con Pronto Pago($)</label><precision>18</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Nombre_Tipo_Registro_CL__c</fullName><externalId>false</externalId><formula>Opportunity.RecordType.Name</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><label>Nombre Tipo Registro</label><required>false</required><type>Text</type><unique>false</unique></fields><fields><fullName>P_Pizarra_C__c</fullName><externalId>false</externalId><label>P°Pizarra  ($/M^3)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>P_Pizarra_Combustible__c</fullName><externalId>false</externalId><label>P°Pizarra  ($/M^3)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Precio_Base__c</fullName><externalId>false</externalId><label>Precio Base</label><precision>10</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Precio_Final_L__c</fullName><description>Precio final del producto con el porcentaje de descuento aplicado</description><externalId>false</externalId><label>Precio Final ($/lt)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Precio_Final_Lubricante__c</fullName><externalId>false</externalId><label>Precio Final ($/lt)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Precio_Ofrecido_SIVA_C__c</fullName><externalId>false</externalId><label>Precio Ofrecido sin IVA  ($/M^3)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Precio_Ofrecido_SIVA_Combustible__c</fullName><externalId>false</externalId><label>Precio Ofrecido sin IVA  ($/M^3)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Precio_Unitario_CLP_Lt_Kg__c</fullName><description>C1 Unitario CLP/Lt/Kg</description><externalId>false</externalId><label>Precio Unitario CLP/Lt/Kg</label><precision>18</precision><required>false</required><scale>2</scale><type>Currency</type></fields><fields><fullName>Recomendacion_Revision_Stock_L__c</fullName><externalId>false</externalId><label>Recomendación de revisión de Stock</label><required>false</required><type>TextArea</type></fields><fields><fullName>Recomendacion_Revision_Stock_Lubricante__c</fullName><externalId>false</externalId><label>Recomendación de revisión de Stock</label><required>false</required><type>TextArea</type></fields><fields><fullName>Revisar_VAC_C__c</fullName><externalId>false</externalId><formula>Quantity &gt; VAC_C__c</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><label>Revisar VAC</label><type>Checkbox</type></fields><fields><fullName>Revisar_VAC_Numero_C__c</fullName><defaultValue>0</defaultValue><description>Es 1 cuando Revisar_VAC_C__c es Verdadero y 0 en caso contrario.</description><externalId>false</externalId><label>Revisar VAC Número</label><precision>1</precision><required>false</required><scale>0</scale><type>Number</type><unique>false</unique></fields><fields><fullName>Riesgo_Credito_CL__c</fullName><externalId>false</externalId><label>Riesgo Crédito  ($/M^3)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Riesgo_Credito_Combustible__c</fullName><externalId>false</externalId><label>Riesgo Crédito  ($/M^3)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Stock_Bodega_Despacho_L__c</fullName><externalId>false</externalId><label>Stock Bodega de Despacho (lt)</label><precision>10</precision><required>false</required><scale>0</scale><type>Number</type><unique>false</unique></fields><fields><fullName>Stock_Bodega_Despacho_Lubricante__c</fullName><externalId>false</externalId><label>Stock Bodega de Despacho (lt)</label><precision>10</precision><required>false</required><scale>0</scale><type>Number</type><unique>false</unique></fields><fields><fullName>Stock_Total_Pais_L__c</fullName><externalId>false</externalId><label>Stock Total País (lt)</label><precision>10</precision><required>false</required><scale>0</scale><type>Number</type><unique>false</unique></fields><fields><fullName>Stock_Total_Pais_Lubricante__c</fullName><externalId>false</externalId><label>Stock Total País (lt)</label><precision>10</precision><required>false</required><scale>0</scale><type>Number</type><unique>false</unique></fields><fields><fullName>Tipo_Cliente_C__c</fullName><externalId>false</externalId><label>Tipo Cliente</label><required>false</required><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Nuevo</fullName><default>false</default><label>Nuevo</label></value><value><fullName>Antiguo</fullName><default>false</default><label>Antiguo</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Tipo_Cliente_Combustible__c</fullName><externalId>false</externalId><label>Tipo Cliente</label><required>false</required><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Nuevo</fullName><default>false</default><label>Nuevo</label></value><value><fullName>Antiguo</fullName><default>false</default><label>Antiguo</label></value></valueSetDefinition></valueSet></fields><fields><fullName>Total_Costo_Producto_Con_Iva_C__c</fullName><externalId>false</externalId><label>Total Costo Producto Con Iva</label><precision>18</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Total_Costo_Producto_Sin_Iva_C__c</fullName><externalId>false</externalId><label>Total Costo Producto Sin Iva</label><precision>18</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Total_IVA_C__c</fullName><externalId>false</externalId><label>Total IVA  ($/M^3)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Unidad_Precio_Costo_L__c</fullName><externalId>false</externalId><label>Unidad de Precio y Costo</label><length>10</length><required>false</required><type>Text</type><unique>false</unique></fields><fields><fullName>Unidad_Precio_Costo_Lubricante__c</fullName><externalId>false</externalId><label>Unidad de Precio y Costo</label><length>10</length><required>false</required><type>Text</type><unique>false</unique></fields><fields><fullName>VAC_C__c</fullName><externalId>false</externalId><formula>PricebookEntry.Product2.Cantidad_Vac_C__c</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><label>VAC (mᶟ/Mes)</label><precision>18</precision><required>false</required><scale>0</scale><type>Number</type><unique>false</unique></fields><fields><fullName>VAC_Combustible__c</fullName><externalId>false</externalId><label>VAC (M^3/Mes)</label><length>10</length><required>false</required><type>Text</type><unique>false</unique></fields><fields><fullName>VOL_Combustible__c</fullName><externalId>false</externalId><label>VOL (M^3/Mes)</label><precision>10</precision><required>false</required><scale>0</scale><type>Number</type><unique>false</unique></fields><fields><fullName>VOL_Lubricante__c</fullName><externalId>false</externalId><label>VOL (lt/mes)</label><precision>10</precision><required>false</required><scale>0</scale><type>Number</type><unique>false</unique></fields><fields><fullName>Venta_Total_CL__c</fullName><description>Combustible

SI TipoPrecio == &apos;Precio Fórmula o Contrato&apos;;
    Total Costo Producto Sin IVA + Gastos Operacionales 
Si No Si (TipoPrecio == &apos;Precio Lista&apos;)
    Total Costo Producto Sin IVA + Gastos Operacionales 
SI TipoPrecio == &apos;Precio Spot&apos;
    Total Costo Producto Sin IVA + Gastos Operacionales 
Si No
     Total Costo Producto Con Iva + (Gastos Operacionales + Riesgo Credito) * 1,19

Lubricante:

Precio Unitario * Volumen</description><externalId>false</externalId><label>Venta Total ($)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Venta_Total_Lubricante__c</fullName><externalId>false</externalId><label>Venta Total ($)</label><precision>16</precision><required>false</required><scale>0</scale><type>Currency</type></fields><fields><fullName>Volumen_C__c</fullName><externalId>false</externalId><label>Volumen (mᶟ/Mes)</label><precision>12</precision><required>false</required><scale>2</scale><type>Number</type><unique>false</unique></fields><fields><fullName>Volumen_L__c</fullName><externalId>false</externalId><label>Volumen (lt/mes)</label><precision>12</precision><required>false</required><scale>2</scale><type>Number</type><unique>false</unique></fields></CustomObject>